FreeST/test/Programs/InvalidTests/Modules/Mod/Mod.fst
Module Mod where

main : Int
main = 23
